# FiaPhy

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  keywords.txt  library.properties  paper.bib  paper.md  test_compile.ino
.github/workflows/: ci.yml
cmake/: FiaPhyConfig.cmake.in
docs/: API.md  GETTING_STARTED.md  HARDWARE.md  PROJECT_STRUCTURE.md
examples/Arduino/AdvancedMultiSensor/: AdvancedMultiSensor.ino
examples/Arduino/Arduino_BME280_Basic/: Arduino_BME280_Basic.ino
examples/Arduino/Raspberry_Pi_Pico_basic/: Arduino_BME280_Basic.ino  raspberry_pi_pico_basic.ino
examples/Arduino_BME280/: Arduino_BME280.ino
examples/PlatformIO_ESP32/: platformio.ini
examples/PlatformIO_ESP32/src/: main.cpp
examples/RaspberryPi/: build.sh  raspberry_pi_example.cpp
src/: FiaPhy.h
src/core/: Constants.h  PhysicsEngine.h  SensorHub.h  Types.h
src/filters/: INR.h
src/physics/: SolarGeometry.h  Thermodynamics.h
src/platform/: Logger.h
vscode-extension/: BUILD.md  QUICKSTART.md  README.md  build.bat  package-lock.json  package.json  tsconfig.json
vscode-extension/snippets/: fiaphy.json
vscode-extension/src/: extension.ts
vscode-extension/syntaxes/: fiaphy.tmLanguage.json
